# autonomous_mobile_car

./: .gitignore  README.md
meamr_bringup/: CMakeLists.txt
meamr_description/urdf/: meamr.urdf copy.xacro
meamr_drive_model/: CMakeLists.txt  package.xml
meamr_drive_model/include/meamr_drive_model/: meamr_base.hpp  serial_interface.hpp
meamr_drive_model/launch/: meamr_base.launch.py
meamr_drive_model/src/: main.cpp  meamr_base.cpp  serial_interface.cpp
meamr_joystick/config/: js_params.yaml
meamr_nav/: CMakeLists.txt
meamr_nav/behavior_trees/: navigate_to_pose_w_replanning_and_recovery.xml
meamr_nav/config/: burger.yaml  meamr_config.yaml  nav2_params.yaml
meamr_nav/launch/: nav.launch.py
meamr_nav/launch/custom_nav2/: custom_bringup_launch.py  custom_navigation_launch.py
rrtstar_planner/config/: nav2_params.yaml
